--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,12 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.30"
     repositories {
+        maven {
+            url uri('repo')
+        }
         google()
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.1.1"
@@ -11,13 +14,20 @@ buildscript {
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
+        classpath "com.bytedance.android.byteX:base-plugin:${bytex_version}"
+//        classpath "com.bytex.android.plugin:sample:${bytex_sample_version}"
     }
 }
 
 allprojects {
     repositories {
+        maven {
+            url uri('repo')
+        }
         google()
         jcenter()
+        mavenCentral()
     }
 }
 
