--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,9 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+
+androidx_version=1.3.1
+kotlin_version=1.4.32
+gradle_version=3.6.3
+bytex_version=0.2.7
+bytex_sample_version=1.0.0
